--- a/package.json
+++ b/package.json
@@ -8,15 +8,31 @@
     "eject": "expo eject"
   },
   "dependencies": {
+    "@react-native-async-storage/async-storage": "^1.13.0",
+    "@react-native-picker/picker": "1.9.11",
     "expo": "~41.0.1",
     "expo-status-bar": "~1.0.4",
     "react": "16.13.1",
     "react-dom": "16.13.1",
     "react-native": "https://github.com/expo/react-native/archive/sdk-41.0.0.tar.gz",
-    "react-native-web": "~0.13.12"
+    "react-native-gesture-handler": "^1.4.1",
+    "react-native-picker-select": "^8.0.4",
+    "react-native-reanimated": "^1.3.0",
+    "react-native-screens": "^2.0.0-alpha.3",
+    "react-native-swipe-list-view": "^2.0.3",
+    "react-native-web": "~0.13.12",
+    "react-navigation": "^4.0.10",
+    "react-navigation-stack": "^1.9.4",
+    "react-navigation-tabs": "^2.5.6",
+    "react-redux": "^7.1.1",
+    "redux": "^4.0.4",
+    "redux-persist": "^6.0.0",
+    "styled-components": "^4.4.0",
+    "uuid": "^3.3.3"
   },
   "devDependencies": {
-    "@babel/core": "^7.9.0"
+    "@babel/core": "^7.9.0",
+    "eslint-plugin-react-hooks": "^4.2.0"
   },
   "private": true
 }
