--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "@react-native-async-storage/async-storage": "^1.13.0",
     "@react-native-picker/picker": "1.9.11",
+    "@react-navigation/bottom-tabs": "^5.11.10",
     "expo": "~41.0.1",
     "expo-status-bar": "~1.0.4",
     "react": "16.13.1",
@@ -20,7 +21,7 @@
     "react-native-reanimated": "^1.3.0",
     "react-native-screens": "^2.0.0-alpha.3",
     "react-native-swipe-list-view": "^2.0.3",
-    "react-native-web": "~0.13.12",
+    "react-native-web": "~0.10.0",
     "react-navigation": "^4.0.10",
     "react-navigation-stack": "^1.9.4",
     "react-navigation-tabs": "^2.5.6",
